--- a/src/main/resources/templates/subject-details.html
+++ b/src/main/resources/templates/subject-details.html
@@ -7,7 +7,7 @@
 <h1>Детали предмета</h1>
 
 <p><strong>ID предмета:</strong> <span th:text="${selectedSubject.id}"></span></p>
-<p><strong>Название:</strong> <span th:text="${selectedSubject.title}"></span></p>
+<p><strong>Название:</strong> <span th:text="${selectedSubject.name}"></span></p>
 <p><strong>Описание:</strong> <span th:text="${selectedSubject.description}"></span></p>
 
 <!-- Ссылка на лекции -->
