--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Список групп</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container mt-5">
-    <h1>Список групп</h1>
+<h1>Список групп</h1>
 
-    <!-- Вывод сообщения об ошибке -->
-    <div th:if="${error}" class="alert alert-danger">
-        <span th:text="${error}">Ошибка</span>
-    </div>
+<ul>
+    <li th:each="group : ${groups}">
+        <strong th:text="${group.name}"></strong><br/>
+        <span th:text="${group.description}"></span><br/>
+        <p>Студенты:</p>
+        <ul>
+            <li th:each="student : ${group.students}">
+                <span th:text="${student.user.firstName} + ' ' + ${student.user.lastName}"></span>
+            </li>
+        </ul>
+    </li>
+</ul>
 
-    <!-- Список групп -->
-    <ul class="list-group">
-        <li class="list-group-item" th:each="group : ${groups}">
-            <a th:href="@{/groups/{name}/(name=${group.name})}" th:text="${group.name}"></a>
-        </li>
-    </ul>
-</div>
+<a href="/groups/create">Создать новую группу</a>
 </body>
 </html>
