beta metof for create groups

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -54,6 +54,9 @@
   <a th:href="@{/kubstuTest}">Главная</a>
   <a th:href="@{/kubstuTest/subjects}">Предметы</a>
   <a th:href="@{/kubstuTest/about}">О платформе</a>
+
+  <!-- 🟢 Новая кнопка для создания группы -->
+  <a th:href="@{/kubstuTest/create-group}">Создать группу</a>
 </div>
 
 <div class="content">
