--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -55,8 +55,8 @@
   <a th:href="@{/kubstuTest/subjects}">Предметы</a>
   <a th:href="@{/kubstuTest/about}">О платформе</a>
 
-  <!-- 🟢 Новая кнопка для создания группы -->
-  <a th:href="@{/kubstuTest/create-group}">Создать группу</a>
+  <!-- 🟢 Новая кнопка для управления группой -->
+  <a th:href="@{/kubstuTest/add-students-to-group}">Добавить студентов в группу</a>
 </div>
 
 <div class="content">
