beta add vies subject for student and +- create add and delete students in groups

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -56,7 +56,7 @@
   <a th:href="@{/kubstuTest/about}">О платформе</a>
 
   <!-- 🟢 Новая кнопка для управления группой -->
-  <a th:href="@{/kubstuTest/add-students-to-group}">Добавить студентов в группу</a>
+  <a th:href="@{/kubstuTest/manage-students}" class="btn btn-primary w-100">Управление студентами</a>
 </div>
 
 <div class="content">
