--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="content">
-  <h1>Личный кабинет</h1>
+  <h1>Личный кабинet</h1>
 
   <div id="user-info">
     <!-- Отображение информации о пользователе -->
