--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -55,12 +55,15 @@
   <a th:href="@{/kubstuTest/subjects}">Предметы</a>
   <a th:href="@{/kubstuTest/about}">О платформе</a>
 
-  <!-- 🟢 Новая кнопка для управления группой -->
+  <!-- 🟢 Кнопка для управления студентами -->
   <a th:href="@{/kubstuTest/manage-students}" class="btn btn-primary w-100">Управление студентами</a>
+
+  <!-- 🟢 Новая кнопка для управления учителями -->
+  <a th:href="@{/kubstuTest/manage-teachers}" class="btn btn-primary w-100">Управление учителями</a>
 </div>
 
 <div class="content">
-  <h1>Личный кабинet</h1>
+  <h1>Личный кабинет</h1>
 
   <div id="user-info">
     <!-- Отображение информации о пользователе -->
