beta Update Role for everyone with role filter

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -60,6 +60,8 @@
 
   <!-- 🟢 Новая кнопка для управления учителями -->
   <a th:href="@{/kubstuTest/manage-teachers}" class="btn btn-primary w-100">Управление учителями</a>
+  <a th:href="@{/kubstuTest/users/role/user}" class="btn btn-primary w-100">Управление ролями пользователей</a>
+
 </div>
 
 <div class="content">
