--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -60,8 +60,11 @@
 
   <!-- 🟢 Новая кнопка для управления учителями -->
   <a th:href="@{/kubstuTest/manage-teachers}" class="btn btn-primary w-100">Управление учителями</a>
-  <a th:href="@{/kubstuTest/users/role/user}" class="btn btn-primary w-100">Управление ролями пользователей</a>
 
+  <!-- 🟢 Управление ролями -->
+  <a th:href="@{/kubstuTest/users/role/user}" class="btn btn-primary w-100">Управление ролями</a>
+
+  <a th:href="@{/kubstuTest/manage-teachers-subject}" class="btn btn-primary w-100">Управление предметами</a>
 </div>
 
 <div class="content">
