--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -64,7 +64,12 @@
   <!-- 🟢 Управление ролями -->
   <a th:href="@{/kubstuTest/users/role/user}" class="btn btn-primary w-100">Управление ролями</a>
 
+  <!-- 🟢 Управление предметами -->
   <a th:href="@{/kubstuTest/manage-teachers-subject}" class="btn btn-primary w-100">Управление предметами</a>
+
+  <!-- 🟢 Добавляем кнопку для управления лекциями (только для учителей) -->
+    <a th:href="@{/kubstuTest/manage-lectures-subject}" class="btn btn-primary w-100">Управление лекциями</a>
+
 </div>
 
 <div class="content">
