beta пофиксил удаление групп и предметов, при добавлении предметов теперь видны только те предметы которые принадлежат учителю. пофиксил удаления учитель-предмет после смены роли.

--- a/src/main/resources/templates/subject-details.html
+++ b/src/main/resources/templates/subject-details.html
@@ -12,7 +12,7 @@
 
 <!-- Ссылка на лекции -->
 <p>
-    <a th:href="@{/subject/{subjectId}/lectures(subjectId=${selectedSubject.id})}">
+    <a th:href="@{/kubstuTest/{subjectId}/lectures(subjectId=${selectedSubject.id})}">
         Перейти к лекциям
     </a>
 </p>
