beta добавление тем к предмету

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -69,6 +69,10 @@
 
   <!-- 🟢 Добавляем кнопку для управления лекциями (только для учителей) -->
     <a th:href="@{/kubstuTest/manage-lectures-subject}" class="btn btn-primary w-100">Управление лекциями</a>
+  <!-- 🟢 Создание теста -->
+  <a th:href="@{/kubstuTest/tests/create-test}" class="btn btn-success w-100">Создать тест</a>
+
+  <a th:href="@{/kubstuTest/manage-topics-subject}" class="btn btn-warning w-100">Управление темами</a>
 
 </div>
 
