beta добавил просмотров тестов , но для учителя включается бесконечная авторизация

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -74,7 +74,7 @@
 
   <a th:href="@{/kubstuTest/manage-topics-subject}" class="btn btn-warning w-100">Управление темами</a>
   <a th:href="@{/kubstuTest/questions/upload-form}" class="btn btn-info w-100">Загрузить вопросы</a>
-
+  <a th:href="@{/kubstuTest/results}" style="font-weight:bold;">Результаты тестов</a>
 </div>
 
 <div class="content">
