beta добавил возможность создания предметов, автоматическое создание вазовых пользователей(студент учитель админ), скоректировал работу присваивания предметов факультетам

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -74,6 +74,7 @@
   <a th:href="@{/kubstuTest/group/create}" style="font-weight:bold;">Создать группу</a>
   <a th:href="@{/kubstuTest/faculty/create}" style="font-weight:bold;">Создать факультет</a>
   <a th:href="@{/kubstuTest/manage-subject-faculty}" class="btn btn-primary w-100">Управление связями</a>
+  <a th:href="@{/kubstuTest/subject/create}" style="font-weight:bold;">Создание предмета</a>
 </div>
 
 <div class="content">
